--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
   </section>
 
-  <script type="text/javascript" src="js/script.js"></script>
+  <script type="text/javascript" src="script.js"></script>
   </div>
 </body>
 </html>
