--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
     <!--Flex Container-->
     <div class="flex items-center mx-auto py-5 text-white">
-      <div class="hidden md:flex items-center justify-between mx-auto text-2xl space-x-6">
+      <div class="hidden md:flex items-center justify-between mx-auto text-3xl space-x-6">
         <a href="About" class="hover:text-yellow-300">About</a>
         <a href="Services" class="hover:text-yellow-300">Services</a>
         <a href="Projects" class="hover:text-yellow-300">Projects</a>
@@ -30,7 +30,7 @@
 
     <!--Mobile Menu-->
     <div class="md:hidden">
-      <div id="menu" class="absolute mx-auto items-center justify-between hidden pt-5 mt-0 mb-0 font-bold space-x-6 bg-opacity-100 text-white drop-shadow-md">
+      <div id="menu" class="absolute mx-auto items-center justify-between hidden pt-5 mt-0 mb-0 font-bold text-3xl space-x-6 bg-opacity-100 text-white drop-shadow-md">
         <a href="About" class="hover:text-yellow-300">About</a>
         <a href="Services" class="hover:text-yellow-300">Services</a>
         <a href="Projects" class="hover:text-yellow-300">Projects</a>
@@ -45,17 +45,17 @@
 
       <!--Heading & Subtext-->
         <div class="flex flex-col mx-auto space-y-5">
-        <h1 class="max-w-md text-4xl font-bold text-center text-white mt-10 md:text-6xl">
+        <h1 class="max-w-md text-6xl text-center text-white mt-10 md:text-6xl">
           Randy Tarasevich
         </h1>
-          <h2 class="max-w-md font-bold py-5 text-center text-white sm:text-3xl md:text-4xl"> {Full-Stack Developer}</h2>
+          <h2 class="max-w-md font-bold py-5 text-center text-white text-4xl md:text-4xl"> {Full-Stack Developer}</h2>
           <p class="max-w-sm text-center mx-auto text-2xl text-white">
             I specialize in building accessible, intuitive end-to-end products and experiences for the modern web.
           </p>
       </div>
   </section>
 
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
   </div>
 </body>
 </html>
